[gd_scene load_steps=2 format=3 uid="uid://cfydsobfmlnf2"]

[ext_resource type="Script" uid="uid://chlpjjkvm361i" path="res://ui/settings_tab/settings_int/settings_int.gd" id="1_couga"]

[node name="SettingsInt" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 108.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_type_variation = &"SettingsCheckbox"
script = ExtResource("1_couga")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingTitle" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
theme_type_variation = &"SettingsCheckboxTitle"
text = "Setting Title"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="IntLabel" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"SettingsIntLabel"
text = "0"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SubtractButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"SettingIntButton"
text = "-"

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"SettingIntButton"
text = "+"

[node name="SettingDescription" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"SettingsCheckboxDescription"
text = "Description for a setting that doesn't exist"
autowrap_mode = 3
